--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header></header>
-    <section id="app">This is a test</section>
-    <script></script>
+    <section id="App">This test</section>
+    <script src='bundle.js'></script>
 </body>
 </html>
